TEIID-1926 adding a performance test and changes to speed up the enhanced sort case